--- a/Java/Reto 3.2/src/GUI.fxml
+++ b/Java/Reto 3.2/src/GUI.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane id="lblsistema" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="359.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="btnCalcular" layoutX="269.0" layoutY="67.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="200.0" text="CALCULAR">
@@ -20,17 +19,17 @@
             <Font name="Arial" size="40.0" />
          </font>
       </Label>
-      <TextField fx:id="txtfnumero" layoutX="44.0" layoutY="67.0" prefHeight="41.0" prefWidth="200.0" promptText="# de Calificaciones">
+      <TextField fx:id="txtFNumero" layoutX="44.0" layoutY="67.0" prefHeight="41.0" prefWidth="200.0" promptText="# de Calificaciones">
          <font>
             <Font size="19.0" />
          </font>
       </TextField>
-      <TextArea fx:id="txtaDatos" layoutX="44.0" layoutY="124.0" prefHeight="200.0" prefWidth="200.0" promptText="Datos">
+      <TextArea fx:id="txtADatos" layoutX="44.0" layoutY="124.0" prefHeight="200.0" prefWidth="200.0" promptText="Datos">
          <font>
             <Font size="19.0" />
          </font>
       </TextArea>
-      <TextArea fx:id="txtaCalculos" layoutX="269.0" layoutY="124.0" prefHeight="200.0" prefWidth="200.0" promptText="Calculos">
+      <TextArea fx:id="txtACalculos" layoutX="269.0" layoutY="124.0" prefHeight="200.0" prefWidth="200.0" promptText="Calculos">
          <font>
             <Font size="19.0" />
          </font>
