--- a/Java/Reto 3.2/src/GUI.fxml
+++ b/Java/Reto 3.2/src/GUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -9,10 +10,13 @@
 
 <Pane id="lblsistema" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="359.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="btnCalcular" layoutX="269.0" layoutY="67.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="200.0" text="CALCULAR">
+      <Button fx:id="btnCalcular" alignment="CENTER" defaultButton="true" layoutX="269.0" layoutY="67.0" mnemonicParsing="false" onAction="#accionCalcular" prefHeight="41.0" prefWidth="200.0" text="CALCULAR" textAlignment="CENTER">
          <font>
             <Font size="19.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </Button>
       <Label fx:id="lblSistema" layoutX="75.0" layoutY="14.0" prefHeight="47.0" prefWidth="391.0" text="Sistema Estadistico" textAlignment="CENTER">
          <font>
